WIP: Switch to Java11 + Update dependencies