@@ -6,9 +6,7 @@
     OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
     the specific language governing permissions and limitations under the License. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xcmailr-webapp</artifactId>
@@ -22,9 +20,9 @@
     </parent>
 
     <properties>
-        <ninja.version>6.3.0</ninja.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <ninja.version>6.8.1</ninja.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <build>
@@ -71,35 +69,26 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.avaje.ebeanorm</groupId>
-                <artifactId>avaje-ebeanorm-mavenenhancer</artifactId>
-                <version>3.2.2</version>
+                <groupId>io.ebean</groupId>
+                <artifactId>ebean-maven-plugin</artifactId>
+                <version>12.1.1</version>
                 <executions>
+                    <!-- enhance main classes -->
                     <execution>
                         <id>main</id>
                         <phase>process-classes</phase>
+                        <configuration>
+                            <classSource>${project.build.outputDirectory}</classSource>
+                            <packages>models</packages>
+                            <transformArgs>debug=1</transformArgs>
+                        </configuration>
                         <goals>
                             <goal>enhance</goal>
                         </goals>
-                        <configuration>
-                            <packages>models</packages>
-                            <transformArgs>debug=1</transformArgs>
-                            <!-- workaround against bug in ebean: https://groups.google.com/forum/?fromgroups#!topic/ebean/w2Q6PSeXKAk%5B1-25%5D -->
-                            <classSource>${project.build.outputDirectory}</classSource>
-                            <classDestination>${project.build.outputDirectory}</classDestination>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -138,6 +127,14 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>--add-modules ALL-SYSTEM</argLine>
+                </configuration>
+            </plugin>
         </plugins>
 
         <resources>
@@ -159,34 +156,36 @@
 
         <pluginManagement>
             <plugins>
+
+
                 <!--This plugin's configuration is used to store Eclipse 
                     m2e settings only. It has no influence on the Maven build itself. -->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.avaje.ebeanorm</groupId>
-                                        <artifactId>avaje-ebeanorm-mavenenhancer</artifactId>
-                                        <versionRange>[3.2.2,)</versionRange>
-                                        <goals>
-                                            <goal>enhance</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <execute>
-                                            <runOnIncremental>true</runOnIncremental>
-                                        </execute>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
+                <!--                <plugin>-->
+                <!--                    <groupId>org.eclipse.m2e</groupId>-->
+                <!--                    <artifactId>lifecycle-mapping</artifactId>-->
+                <!--                    <version>1.0.0</version>-->
+                <!--                    <configuration>-->
+                <!--                        <lifecycleMappingMetadata>-->
+                <!--                            <pluginExecutions>-->
+                <!--                                <pluginExecution>-->
+                <!--                                    <pluginExecutionFilter>-->
+                <!--                                        <groupId>org.avaje.ebeanorm</groupId>-->
+                <!--                                        <artifactId>avaje-ebeanorm-mavenenhancer</artifactId>-->
+                <!--                                        <versionRange>[3.2.2,)</versionRange>-->
+                <!--                                        <goals>-->
+                <!--                                            <goal>enhance</goal>-->
+                <!--                                        </goals>-->
+                <!--                                    </pluginExecutionFilter>-->
+                <!--                                    <action>-->
+                <!--                                        <execute>-->
+                <!--                                            <runOnIncremental>true</runOnIncremental>-->
+                <!--                                        </execute>-->
+                <!--                                    </action>-->
+                <!--                                </pluginExecution>-->
+                <!--                            </pluginExecutions>-->
+                <!--                        </lifecycleMappingMetadata>-->
+                <!--                    </configuration>-->
+                <!--                </plugin>-->
             </plugins>
         </pluginManagement>
     </build>
@@ -194,14 +193,36 @@
     <dependencies>
         <dependency>
             <groupId>org.ninjaframework</groupId>
-            <artifactId>ninja-core</artifactId>
+            <artifactId>ninja-standalone</artifactId>
             <version>${ninja.version}</version>
+            <exclusions>
+                <!-- exclude some unneeded/unwanted artifacts to reduce footprint and to avoid version conflicts -->
+                <exclusion>
+                    <artifactId>ehcache-core</artifactId>
+                    <groupId>net.sf.ehcache</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                    <groupId>org.hibernate</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>hibernate-c3p0</artifactId>
+                    <groupId>org.hibernate</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-validator</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
+            <groupId>org.ninjaframework</groupId>
+            <artifactId>ninja-db-classic</artifactId>
+            <version>6.8.1</version>
         </dependency>
         <dependency>
             <groupId>org.ninjaframework</groupId>
@@ -212,23 +233,14 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.196</version>
+            <version>1.4.200</version>
         </dependency>
         <dependency>
             <groupId>org.ninjaframework</groupId>
             <artifactId>ninja-ebean-module</artifactId>
-            <version>1.5.0</version>
+            <version>3.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.ninjaframework</groupId>
-            <artifactId>ninja-servlet</artifactId>
-            <version>${ninja.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.2</version>
-        </dependency>
+
         <dependency>
             <groupId>org.subethamail</groupId>
             <artifactId>subethasmtp</artifactId>
@@ -237,7 +249,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.5</version>
+            <version>2.0.5</version>
         </dependency>
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -248,6 +260,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
             <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
